--- a/views/login.ejs
+++ b/views/login.ejs
@@ -117,7 +117,7 @@
                     <li class="label"><span class='fa fa-lock'></span><span>&nbsp;&nbsp;Password</span></li>
                     <li class="input"><input type='password' name="password"></li>
                     <li class="button"><input type="submit" value="Login"></li>
-                    <li class="full"><a href='\register'>Register</a><a href='\reset'>Forgot your password (?)</a></li>
+                    <!-- <li class="full"><a href='\register'>Register</a><a href='\reset'>Forgot your password (?)</a></li> -->
                 </ul>
             </form>
         </div>
