--- a/views/team.ejs
+++ b/views/team.ejs
@@ -81,19 +81,19 @@
 
             <ul id="people-list">
                 <li>
-                    <img src="/img/profile/profile-01.jpg" />
+                    <img src="/img/profile/profile-01a.jpg" />
 
                     <p><strong>Dylon Kok Chun Wei<br>/ Project Leader, Documenter, &amp; Developer /</strong><br><br>Graduated in Diploma in Information & Communication Technology (DICTN) - INTI International College Subang.<br><br> Proceeded Bachelor Degree in Computer Science (Major in Software Engineering) - University of Wollogong - Semester 6.<br><br> I have driven numerous groups in various tasks amid my Diploma level. That's why I am sure to lead this group and deliver extraordinary applications for our clients. I will stay up with the most recent data assembled from our clients and adopting any delegation and use of project assurance roles within agreed reporting structures. Moreover, I do appreciate investigating new apparatuses and learn new things undertaking projects which enable me to master in certain new skills.
-                    </p>
+                    </p>    
                 </li>
                 <li>
-                    <img src="/img/profile/profile-02.jpg" />
+                    <img src="/img/profile/profile-02a.jpg" />
 
                     <p><strong>Hong Zhin Shun<br>/ Designer &amp; Programmer /</strong><br><br>Graduated in Diploma in Information & Communication Technology (DICTN) - INTI International College Subang.<br><br> Proceeded Bachelor Degree in Computer Science (Major in Software Engineering & Digital System Security) - University of Wollogong - Semester 6.<br><br> I am passionate in computer programming and IT related field. I am also a self-motivated person which makes me eager to learn new skills and technique. Part of my experienced came from my freelancing job in software and web development path. Besides, I have good managing skills as i always want my job or task to be in high-performance standard while implementing tasks within an allotted timeframe.
                     </p>
                 </li>
                 <li>
-                    <img src="/img/profile/profile-03.jpg" />
+                    <img src="/img/profile/profile-03a.jpg" />
 
                     <p><strong>Kong Mun Hon<br>/ Designer &amp; Programmer /</strong><br><br>Graduated in Foundation in Business Information Technology (CFPI) - INTI International College Subang.<br><br> Proceeded Bachelor Degree in Computer Science (Major in Mobile Computing) - University of Wollogong - Semester 6.<br><br> The reason why I’m designer and coder of this team is because I have done a lot of designing and implementing function back when I have my C#, C++ and Java class such as working in group to complete or make changes on a program in order to meet the needs of my lecturer. Obviously in this project I have to learn new tools and possibly new programming language, that's why I would take on the challenges.
                     </p>
