--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,16 +1,18 @@
 <footer>
     <ul>
-        <li class="left"><span>Copyright&nbsp;&copy;&nbsp;2018 | THE BROGRAMMERs</span></li>
-        <li class="middle">
+        <li class="left">
             <ul>
-                <li><span class="fa fa-home"></span><a href="/">&nbsp;&nbsp;Home.</a></li>
-                <li><span class="fa fa-book"></span><a href="/tutorial">&nbsp;&nbsp;Tutorial.</a></li>
-                <li><span class="fa fa-users"></span><a href="/team">&nbsp;&nbsp;Team.</a></li>
-                <li><span class="fa fa-phone"></span><a href="/contact">&nbsp;&nbsp;Contact us.</a></li>
+                <li><a href=""><img src="img/logo/Team_Logo.png"></a></li>
+                <li><span>Copyright&nbsp;&copy;&nbsp;2018 | THE BROGRAMMERs</span></li>
             </ul>
         </li>
         <li class="right">
-
+            <ul>
+                <li><span>IN COLLABORATION WITH</span></li>
+                <li><a href=""><img src="img/logo/DACSEE_Logo_(Modify).png"></a></li>
+                <li><a href=""><img src="img/logo/INTI_Logo.png"></a></li>
+                <li><a href=""><img src="img/logo/uow_logo.png"></a></li>
+            </ul>
         </li>
     </ul>
 </footer>
